--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -10,7 +10,7 @@
      
     </h4>
 
-    <form id='userinfoform' method='post' action='about' >
+    <form id='userinfoform' method='post' action='about2' >
       <p>
     Name: <input type='text' name='name_lulu' />
       </p>
