--- a/templates/results.html
+++ b/templates/results.html
@@ -7,7 +7,7 @@
     <meta name="author" content="@gotoariel">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>Results 1</title>
+    <title>Your Results</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -17,12 +17,12 @@
       <div class="row">
         <div class="col-lg-12 text-left">
           <h2>Results for {{name}}</h2>
-	  <p>Your field is {{yf}} </p>
-          <p>Your collaborator's field is {{cf}} </p>
-	  <p>Your research area is {{ra}} </p>
-		<p><a href="/">Go Back</a></p>
-	<p><a href="results"> NEXT </a> </p>	
+	  <p>Your first potential collaborator is {{out_1}} </p>
+          <p>You are {{num_nodes}} degrees away from this person. </p>
+	  <p>The path from you to this person is: {{mypath}} </p>
 
+
+		<p><a href="/about2">Go Back</a></p>
         </div>
       </div>
     </div>
