--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -16,36 +16,40 @@
       </p>
 
        <p>
-      <label for="source_field">What is YOUR field?</label>
+      <label for="source_field">What is YOUR research area?</label>
 <p>
 <select name="source_field" id="src_fld">
-  <option value="psych">Psychology</option>
-  <option value="neuro">Neuroscience</option>
-  <option value="edu_r">Education Research</option>
+  <option value="math">Math</option>
+  <option value="reading">Reading</option>
 </select>
 </p>
+
+      <label for="source_field2">What is YOUR primary method?</label>
+<p>
+<select name="source_field2" id="src_fld">
+  <option value="fmri">fMRI</option>
+  <option value="eeg">EEG</option>
+</select>
+</p>
+
+
 
 <p>
  <label for="destination_field">What field do you want to collaborate with?</label>
 </p>
 <p>
 <select name="destination_field" id="dst_fld">
-  <option value="Psychology">Psychology</option>
-  <option value="Neuroscience">Neuroscience</option>
-  <option value="Education Research">Education Research</option>
+  <option value="math">Math</option>
+  <option value="reading">Reading</option>
 </select>
 </p>
 <p>
- <label for="topic">What do you study?:</label>
+ <label for="topic">Desired collaborator's primary method:</label>
 </p>
 <p>
 <select name="topic" id="topic">
-  <option value="Learning & Memory">Learning & Memory</option>
-  <option value="Computational Modelingmodel">Computational Modeling</option>
-  <option value="Math education">Math education or math cognition</option>
-  <option value="Reading">Reading/Literacy</option>
-  <option value="STEM">STEM learning</option>
-  <option value="Social/Emotional">Social/Emotional aspects of learning</option>
+  <option value="eeg">EEG</option>
+  <option value="fmri">fMRI</option>
 </select>
 </p>
 
