updates to about2.html

--- a/templates/about2.html
+++ b/templates/about2.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-d  <head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Skeleton application demoing Heroku and Flask integration.">
@@ -29,10 +29,9 @@ d  <head>
 		<label for="R2">{{myR2}}</label><br>
 		<input type="radio" id="R3" name="start_node" value="R3">
 		<label for="R3">{{myR3}}</label><br>
-</form>
-<form>
+
 <p>Choose a potential collaborator</p>
-		<form action='results'>
+
 		<input type="radio" id="C1" name="target_node" value="C1">
 		<label for="C1">{{myC1}}</label><br>
 		<input type="radio" id="C2" name="target_node" value="C2">
@@ -45,7 +44,7 @@ d  <head>
 
 
 </form>
-		<p><a href="results">Go to results</a></p>
+HELLO WTF?		<p><input type = "submit" value="submit"></p>
 
 		<p><a href="userinfo">Go Back</a></p>
         </div>
