Added post method to form in about3.html

--- a/templates/about3.html
+++ b/templates/about3.html
@@ -17,7 +17,7 @@
           <h2>Results for {{name}}</h2>
 	  <p>Your collaborator's field is {{cf}} </p>
 
-	 <form action='results'>
+	 <form action='results' method='post'>
 
 	  <p>Your research area is {{ra}} </p>
 		<p> <label for="start_node"> Which of these researchers is closest to you/your work? (start node)</label></p>
@@ -34,7 +34,7 @@
 
 
 </select>
-<br>
+<p></p>
 		<input type='submit' value='submit'/>
 
 </form>
