--- a/templates/about3.html
+++ b/templates/about3.html
@@ -21,12 +21,12 @@
 
 	  <p>Your research area is {{ra}} </p>
 		<p> <label for="start_node"> Which of these researchers is closest to you/your work? (start node)</label></p>
-		<select name="my_start_node", id="start_node">
+		<select name="start_node", id="start_node">
 		<option value={{myR1}}>{{myR1}}</option><br>
 		<option value={{myR2}}>{{myR2}}</option><br>
 		<option value={{myR3}}>{{myR3}}</option><br>
 </select>
-<p><label for="target_node">Choose a potential collaborator</label></p>
+		<p><label for="target_node">Choose a potential collaborator</label></p>
 		<select name="target_node", id="target_node">
 		<option value={{myC1}}>{{myC1}}</option><br>
 		<option value={{myC2}}>{{myC2}}</option><br>
