--- a/templates/results.html
+++ b/templates/results.html
@@ -17,12 +17,11 @@
       <div class="row">
         <div class="col-lg-12 text-left">
           <h2>Results for {{name}}</h2>
-	  <p>Your first potential collaborator is {{out_1}} </p>
+	  <p>Your chosen collaborator is {{out_1}} </p>
           <p>You are {{num_nodes}} degrees away from this person. </p>
 	  <p>The path from you to this person is: {{mypath}} </p>
 
 
-		<p><a href="/about2">Go Back</a></p>
         </div>
       </div>
     </div>
