updates to userinfo

--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -12,7 +12,7 @@
 
     <form id='userinfoform' method='post' action='about2' >
       <p>
-    Name: <input type='text' name='name_lulu' />
+    Name: <input type='text' name='name' />
       </p>
 
        <p>
@@ -21,6 +21,7 @@
 <select name="source_field" id="src_fld">
   <option value="math">Math</option>
   <option value="reading">Reading</option>
+  <option value="other">other</option>	
 </select>
 </p>
 
@@ -29,6 +30,7 @@
 <select name="source_field2" id="src_fld">
   <option value="fmri">fMRI</option>
   <option value="eeg">EEG</option>
+  <option value="other">other</option>
 </select>
 </p>
 
@@ -41,6 +43,7 @@
 <select name="destination_field" id="dst_fld">
   <option value="math">Math</option>
   <option value="reading">Reading</option>
+  <option value="other">other</option>
 </select>
 </p>
 <p>
@@ -50,6 +53,7 @@
 <select name="topic" id="topic">
   <option value="eeg">EEG</option>
   <option value="fmri">fMRI</option>
+  <option value="other">other</option>
 </select>
 </p>
 
@@ -62,5 +66,6 @@
     </form>
 
   </div>
+<a href="\"> Go Back </a>
 </div>
 </html>
