updated text on graph

--- a/templates/interactive_graphs2.html
+++ b/templates/interactive_graphs2.html
@@ -81,5 +81,8 @@
         </script>
     
   </body>
+Each node represents a rearchers.  Edges represent co-authored articles.  The node color indicates the researcher's main area of research: red = reading, blue = math, green = other.  Mouse over nodes for more info.
+Use the box zoom tool to zoom in, then use the reset icon to return to the original view.
   
+<a href= "/"> Go Back </a>
 </html>
